--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,10 @@ dependencies:
   cupertino_icons: ^1.0.8
   velocity_x: ^4.2.1
   http: ^1.2.2
+  firebase_core: ^3.8.0
+  firebase_auth: ^5.3.3
+  fluttertoast: ^8.2.8
+  google_sign_in: ^6.2.2
 
 dev_dependencies:
   flutter_test:
@@ -20,3 +24,5 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+  - lib/images/
